k8s/02-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: lpsb-webui-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: lpsb-webui
    k8s.kuboard.cn/workload: lpsb-webui
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure, web
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-http-redirect-https-testing@kubernetescrd,
      kube-system-common-headers@kubernetescrd

spec:
  tls:
    - hosts:
        - '*.lpsecretbase.com'
        - lpsecretbase.com
      secretName: lpsecretbase-com-tls
  rules:
    - host: www.lpsecretbase.com
      http:
        paths:
          - path: /
            backend:
              serviceName: lpsb-webui
              servicePort: 80
    - host: lpsecretbase.com
      http:
        paths:
          - path: /
            backend:
              serviceName: lpsb-webui
              servicePort: 80
